Header - CSS Desktop

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <hr class="divider" />
                     </li>
                     <li class="hide-guest"><a href="schedules.html">Agendamentos</a></li>
-                    <li class="hide-guest"><a href="profile.html">Agendamentos</a></li>
+                    <li class="hide-guest"><a href="profile.html">Perfil</a></li>
                     <li class="hide-guest"><a href="change-photo.html">Mudar Foto</a></li>
                     <li class="hide-guest"><a href="change-password.html">Alterar Senha</a></li>
                 </ul>
