--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     transform="translate(0 4)" />
             </svg>
         </button>
-        <div class="menu logged">
+        <div class="menu">
             <nav>
                 <button type="button" id="btn-close">
                     <svg id="close-24px" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
