Footer - CSS Mobile

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         <hr class="italy" />
     </header>
 
+    <main></main>
+
     <footer id="footer">
         <button type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="64.317" height="64.317" viewBox="0 0 64.317 64.317">
@@ -95,15 +97,15 @@
 
         <div class="columns">
             <div>
-                <ul>
+                <ul class="links">
                     <li>Links</li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Revisão</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
                 <ul>
-                    <li>Contato</li>
-                    <li>E-mail: <a href="mailto:support@ferrari.it"></a>support@ferrari.it</li>
+                    <li class="title">Contato</li>
+                    <li>E-mail:&nbsp; <a href="mailto:support@ferrari.it"></a>support@ferrari.it</li>
                     <li class="social">
                         <a href="#"><img src="assets/images/facebook.svg" alt="Facebook"></a>
                         <a href="#"><img src="assets/images/twitter.svg" alt="Twitter"></a>
