Footer - CSS Desktop

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="columns">
             <div>
                 <ul class="links">
-                    <li>Links</li>
+                    <li class="title">Links</li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Revisão</a></li>
                     <li><a href="#">Contato</a></li>
@@ -113,7 +113,6 @@
                         <a href="#"><img src="assets/images/instagram.svg" alt="Instagram"></a>
 
                     </li>
-                    <li><a href="#">Contato</li>
                 </ul>
             </div>
             <a href="#" class="logo">
