Página - Área do Cliente - CSS - Mobile

--- a/profile.html
+++ b/profile.html
@@ -123,9 +123,9 @@
                     <label for="phone">Telefone</label>
                 </div>
 
-                <div class="toast">
+                <div class="toast success">
                     Dados salvos com sucesso!
-                    <button type="button">
+                    <button type="button" class="close">
                         <span>&times;</span>
                     </button>
                 </div>
