Página - Área do Cliente - CSS - Desktop

--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
 
             <form>
                 <div class="field">
-                    <input type="text" name="name" id="name" />
+                    <input type="text" name="name" id="name" value="Djalma" readonly />
                     <label for="name">Nome Completo</label>
                 </div>
 
@@ -113,14 +113,18 @@
                     <label for="birth_at">Data de Nascimento</label>
                 </div>
 
-                <div class="field">
-                    <input type="text" name="document" id="document" />
-                    <label for="document">Documento</label>
-                </div>
+                <div class="fields">
 
-                <div class="field">
-                    <input type="tel" name="phone" id="phone" />
-                    <label for="phone">Telefone</label>
+                    <div class="field">
+                        <input type="text" name="document" id="document" />
+                        <label for="document">Documento</label>
+                    </div>
+
+                    <div class="field">
+                        <input type="tel" name="phone" id="phone" />
+                        <label for="phone">Telefone</label>
+                    </div>
+
                 </div>
 
                 <div class="toast success">
